# actix-logs

./: .env  Cargo.toml  Dockerfile  Dockerfile.alpine
migrations/2021-02-15-211647_create_logs/: down.sql  up.sql
migrations/2021-02-17-025442_create_users/: up.sql
migrations/2021-02-17-025457_create_log_entries/: down.sql  up.sql
src/: auth.rs  constants.rs  error.rs  handlers.rs  jwt.rs  log_entry.rs  login.rs  main.rs  routes.rs  schema.rs  security.rs  server_error.rs  user.rs
src/auth/: middleware.rs
src/entities/: log_entry.rs  mod.rs  schema.rs  user.rs
src/models/: mod.rs  user.rs  user_token.rs
src/routes/: auth.rs  logs.rs  mod.rs  users.rs
test/: api-logs.http  logs.http  users.http
