[package]
name = "actix-logs"
version = "0.1.0"
authors = ["Joel Crosby <joelcrosby@live.co.uk>"]
edition = "2018"

[dependencies]
actix-web = "4.0.1"
actix-service = "2.0.2"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
r2d2-diesel = "1.0.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
anyhow = "1.0.55"
chrono = "0.4"
rust-argon2 = "1.0.0"
uuid =  { version = "0.8", features = ["serde", "v4"] }
jsonwebtoken = "8.0.1"
derive_more = "0.99.17"
