[package]
name = "actix-logs"
version = "0.1.0"
authors = ["Joel Crosby <joelcrosby@live.co.uk>"]
edition = "2018"

[dependencies]
actix-web = "4"
actix-service = "2.0.2"
r2d2-diesel = "1.0.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
serde_json = "1.0.81"
anyhow = "1.0.58"
rust-argon2 = "1.0.0"
jsonwebtoken = "8.1.1"
derive_more = "0.99.17"
futures-util = "0.3.21"
log = "0.4.17"

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.diesel]
version = "1.4.8"
features = ["postgres", "r2d2", "chrono"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.uuid]
version = "1.1.2"
features = ["serde", "v4"]
